# libgsqlw

./: .gdbinit  .gitignore  COPYING  Makefile.am  README  README.TXT  acinclude.m4  configure.ac  glib-sql-wrapper.pc.in  gsql-priv.h  gsqldriver.c  gsqldriver.h  gsqlw-mysql.c  gsqlw-pgsql.c  gsqlw-priv.h  gsqlw-sqlite.c  gsqlw-test.c  gsqlw.c  gsqlw.h  gsqlw.pc  gsqlw.pc.in  gsqlwraper.c  gsqlwraper.h  libgsqlw.pc.in  test.c
docs/: Doxyfile  index.doc
